test/tests/stages/18_structures/invalid_types/invalid_incomplete_structs/incomplete_local_var.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[17]:
  struct
  identifier(s)
  ;
  int
  identifier(main)
  (
  void
  )
  {
  struct
  identifier(s)
  identifier(v)
  ;
  return
  const int(0)
  ;
  }
